erDiagram
    users ||--|| user_spotify_stats : ""
    users ||--o{ user_top_artists : ""
    artists ||--o{ user_top_artists : ""
    users ||--o{ connections : ""
    users ||--o{ events : ""
    artists ||--o{ events : ""
    events ||--o{ event_attendees : ""
    users ||--o{ event_attendees : ""

    users {
        uuid id PK
        varchar email UK "NOT NULL"
        varchar spotify_id UK "nullable"
        varchar username UK "NOT NULL"
        varchar display_name "nullable"
        text profile_photo_url "nullable"
        text bio "nullable"
        text profile_external_url "nullble"
        text spotify_profile_url "nullable"
        boolean show_spotify_profile "DEFAULT true"
        timestamp created_at
        timestamp updated_at
        timestamp last_login
    }

    user_spotify_stats {
        uuid id PK
        uuid user_id FK "NOT NULL, UNIQUE"
        text access_token "encrypted, NOT NULL"
        text refresh_token "encrypted, NOT NULL"
        timestamp token_expires_at "NOT NULL"
        timestamp last_synced_at
        timestamp created_at
        timestamp updated_at
    }

    artists {
        uuid id PK
        varchar spotify_artist_id UK "NOT NULL"
        varchar name "NOT NULL"
        text_array genres "nullable"
        text image_url "nullable"
        varchar spotify_uri "nullable"
        timestamp created_at
        timestamp updated_at
    }

    user_top_artists {
        uuid id PK
        uuid user_id FK "NOT NULL"
        uuid artist_id FK "NOT NULL"
        int rank "1-50, NOT NULL"
        enum time_range "short/medium/long_term DEFFAULT long_term"
        timestamp created_at
        timestamp updated_at
    }

    connections {
        uuid id PK
        uuid requester_id FK "NOT NULL"
        uuid receiver_id FK "NOT NULL"
        enum status "pending/accepted"
        decimal compatibility_score "0-100, nullable"
        timestamp created_at
        timestamp updated_at
    }

    events {
        uuid id PK
        uuid creator_id FK "NOT NULL"
        varchar title "NOT NULL"
        uuid artist_id FK "nullable"
        text description "nullable"
        timestamp date_time "nullable"
        varchar location "nullable"
        external_links "nullable"
        music_tag "nullable"
        enum visibility "public/private DEFAULT private"
        int max_attendees "nullable"
        timestamp created_at
        timestamp updated_at
    }

    event_attendees {
        uuid id PK
        uuid event_id FK "NOT NULL"
        uuid user_id FK "NOT NULL"
        enum status "invited/going/maybe/declined"
        timestamp created_at
        timestamp updated_at
    }

